Site généré à partir du jar sans les htaccess